--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:site_name" content="Арсений Котиков" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/web_preview.png" />
-    <meta property="og:image" content="https://kotikov.pages.dev/src/web_preview.png" />                                                                                            
+    <meta property="og:image" content="https://kotikov.pages.dev/src/web_preview.png" />
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/web_preview.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
@@ -59,7 +59,7 @@
     <div class="main linear-bg">
       <p class="lead"></p>
       <h1 class="h1 text-center"><span class="animatedtext-content">Привет!</span></h1>
-      <h3 class="h3 text-center" style="margin-left: 1rem; margin-right: 1rem;">
+      <h3 class="h3 text-center" style="margin-left: 1rem; margin-right: 1rem">
         <span class="animatedtext-content animatedtext-second">тут нужно что-то написать про себя, так? Когда-нибудь я так и сделаю.</span>
       </h3>
       <hr class="hr" />
@@ -109,6 +109,32 @@
     </div>
     <div class="main">
       <h2 class="h2xl text-center"><span class="animatedtext-content">Что я учу/планирую выучить?</span></h2>
+    </div>
+    <div class="container progress-bar-animated" style="margin-bottom: 0; background: #1d1d1de0">
+      <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" viewBox="0 0 1440 150" version="1.1">
+        <defs>
+          <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+            <stop stop-color="rgba(243, 106, 62, 0.1)" offset="0%"></stop>
+            <stop stop-color="rgba(245, 39, 39, 0.8)" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+        <path
+          style="transform: translate(0, 0px); opacity: 1; filter: drop-shadow(10px 31px 31px rgb(0, 0, 0))"
+          fill="url(#sw-gradient-0)"
+          d="M0,135L40,122.5C80,110,160,85,240,72.5C320,60,400,60,480,72.5C560,85,640,110,720,117.5C800,125,880,115,960,102.5C1040,90,1120,75,1200,77.5C1280,80,1360,100,1440,105C1520,110,1600,100,1680,100C1760,100,1840,110,1920,102.5C2000,95,2080,70,2160,60C2240,50,2320,55,2400,57.5C2480,60,2560,60,2640,52.5C2720,45,2800,30,2880,20C2960,10,3040,5,3120,12.5C3200,20,3280,40,3360,57.5C3440,75,3520,90,3600,92.5C3680,95,3760,85,3840,87.5C3920,90,4000,105,4080,112.5C4160,120,4240,120,4320,110C4400,100,4480,80,4560,60C4640,40,4720,20,4800,22.5C4880,25,4960,50,5040,50C5120,50,5200,25,5280,27.5C5360,30,5440,60,5520,62.5C5600,65,5680,40,5720,27.5L5760,15L5760,150L5720,150C5680,150,5600,150,5520,150C5440,150,5360,150,5280,150C5200,150,5120,150,5040,150C4960,150,4880,150,4800,150C4720,150,4640,150,4560,150C4480,150,4400,150,4320,150C4240,150,4160,150,4080,150C4000,150,3920,150,3840,150C3760,150,3680,150,3600,150C3520,150,3440,150,3360,150C3280,150,3200,150,3120,150C3040,150,2960,150,2880,150C2800,150,2720,150,2640,150C2560,150,2480,150,2400,150C2320,150,2240,150,2160,150C2080,150,2000,150,1920,150C1840,150,1760,150,1680,150C1600,150,1520,150,1440,150C1360,150,1280,150,1200,150C1120,150,1040,150,960,150C880,150,800,150,720,150C640,150,560,150,480,150C400,150,320,150,240,150C160,150,80,150,40,150L0,150Z"
+        ></path>
+        <defs>
+          <linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0">
+            <stop stop-color="rgba(243, 106, 62, 0.5)" offset="0%"></stop>
+            <stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+        <path
+          style="transform: translate(0, 50px); opacity: 0.9; filter: drop-shadow(10px 31px 31px rgb(0, 0, 0))"
+          fill="url(#sw-gradient-1)"
+          d="M0,39L17.1,34.7C34.3,30,69,22,103,30.3C137.1,39,171,65,206,71.5C240,78,274,65,309,62.8C342.9,61,377,69,411,73.7C445.7,78,480,78,514,67.2C548.6,56,583,35,617,30.3C651.4,26,686,39,720,49.8C754.3,61,789,69,823,62.8C857.1,56,891,35,926,34.7C960,35,994,56,1029,54.2C1062.9,52,1097,26,1131,28.2C1165.7,30,1200,61,1234,75.8C1268.6,91,1303,91,1337,95.3C1371.4,100,1406,108,1440,112.7C1474.3,117,1509,117,1543,108.3C1577.1,100,1611,82,1646,75.8C1680,69,1714,74,1749,80.2C1782.9,87,1817,95,1851,84.5C1885.7,74,1920,43,1954,30.3C1988.6,17,2023,22,2057,21.7C2091.4,22,2126,17,2160,15.2C2194.3,13,2229,13,2263,10.8C2297.1,9,2331,4,2366,17.3C2400,30,2434,61,2451,75.8L2468.6,91L2468.6,130L2451.4,130C2434.3,130,2400,130,2366,130C2331.4,130,2297,130,2263,130C2228.6,130,2194,130,2160,130C2125.7,130,2091,130,2057,130C2022.9,130,1989,130,1954,130C1920,130,1886,130,1851,130C1817.1,130,1783,130,1749,130C1714.3,130,1680,130,1646,130C1611.4,130,1577,130,1543,130C1508.6,130,1474,130,1440,130C1405.7,130,1371,130,1337,130C1302.9,130,1269,130,1234,130C1200,130,1166,130,1131,130C1097.1,130,1063,130,1029,130C994.3,130,960,130,926,130C891.4,130,857,130,823,130C788.6,130,754,130,720,130C685.7,130,651,130,617,130C582.9,130,549,130,514,130C480,130,446,130,411,130C377.1,130,343,130,309,130C274.3,130,240,130,206,130C171.4,130,137,130,103,130C68.6,130,34,130,17,130L0,130Z"
+        ></path>
+      </svg>
     </div>
     <div class="main-transparent">
       <h3 class="h3 text-center">
@@ -161,6 +187,32 @@
       <p></p>
       <h2 class="h2xl text-center"><span class="animatedtext-content">Чем я интересуюсь❓</span></h2>
       <p></p>
+    </div>
+    <div class="container progress-bar-animated">
+      <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" viewBox="0 0 1440 150" version="1.1">
+        <defs>
+          <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+            <stop stop-color="rgba(243, 106, 62, 0.1)" offset="0%"></stop>
+            <stop stop-color="rgba(245, 39, 39, 0.8)" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+        <path
+          style="transform: translate(0, 0px); opacity: 1; filter: drop-shadow(10px 31px 31px rgb(0, 0, 0))"
+          fill="url(#sw-gradient-0)"
+          d="M0,135L40,122.5C80,110,160,85,240,72.5C320,60,400,60,480,72.5C560,85,640,110,720,117.5C800,125,880,115,960,102.5C1040,90,1120,75,1200,77.5C1280,80,1360,100,1440,105C1520,110,1600,100,1680,100C1760,100,1840,110,1920,102.5C2000,95,2080,70,2160,60C2240,50,2320,55,2400,57.5C2480,60,2560,60,2640,52.5C2720,45,2800,30,2880,20C2960,10,3040,5,3120,12.5C3200,20,3280,40,3360,57.5C3440,75,3520,90,3600,92.5C3680,95,3760,85,3840,87.5C3920,90,4000,105,4080,112.5C4160,120,4240,120,4320,110C4400,100,4480,80,4560,60C4640,40,4720,20,4800,22.5C4880,25,4960,50,5040,50C5120,50,5200,25,5280,27.5C5360,30,5440,60,5520,62.5C5600,65,5680,40,5720,27.5L5760,15L5760,150L5720,150C5680,150,5600,150,5520,150C5440,150,5360,150,5280,150C5200,150,5120,150,5040,150C4960,150,4880,150,4800,150C4720,150,4640,150,4560,150C4480,150,4400,150,4320,150C4240,150,4160,150,4080,150C4000,150,3920,150,3840,150C3760,150,3680,150,3600,150C3520,150,3440,150,3360,150C3280,150,3200,150,3120,150C3040,150,2960,150,2880,150C2800,150,2720,150,2640,150C2560,150,2480,150,2400,150C2320,150,2240,150,2160,150C2080,150,2000,150,1920,150C1840,150,1760,150,1680,150C1600,150,1520,150,1440,150C1360,150,1280,150,1200,150C1120,150,1040,150,960,150C880,150,800,150,720,150C640,150,560,150,480,150C400,150,320,150,240,150C160,150,80,150,40,150L0,150Z"
+        ></path>
+        <defs>
+          <linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0">
+            <stop stop-color="rgba(243, 106, 62, 0.5)" offset="0%"></stop>
+            <stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+        <path
+          style="transform: translate(0, 50px); opacity: 0.9; filter: drop-shadow(10px 31px 31px rgb(0, 0, 0))"
+          fill="url(#sw-gradient-1)"
+          d="M0,39L17.1,34.7C34.3,30,69,22,103,30.3C137.1,39,171,65,206,71.5C240,78,274,65,309,62.8C342.9,61,377,69,411,73.7C445.7,78,480,78,514,67.2C548.6,56,583,35,617,30.3C651.4,26,686,39,720,49.8C754.3,61,789,69,823,62.8C857.1,56,891,35,926,34.7C960,35,994,56,1029,54.2C1062.9,52,1097,26,1131,28.2C1165.7,30,1200,61,1234,75.8C1268.6,91,1303,91,1337,95.3C1371.4,100,1406,108,1440,112.7C1474.3,117,1509,117,1543,108.3C1577.1,100,1611,82,1646,75.8C1680,69,1714,74,1749,80.2C1782.9,87,1817,95,1851,84.5C1885.7,74,1920,43,1954,30.3C1988.6,17,2023,22,2057,21.7C2091.4,22,2126,17,2160,15.2C2194.3,13,2229,13,2263,10.8C2297.1,9,2331,4,2366,17.3C2400,30,2434,61,2451,75.8L2468.6,91L2468.6,130L2451.4,130C2434.3,130,2400,130,2366,130C2331.4,130,2297,130,2263,130C2228.6,130,2194,130,2160,130C2125.7,130,2091,130,2057,130C2022.9,130,1989,130,1954,130C1920,130,1886,130,1851,130C1817.1,130,1783,130,1749,130C1714.3,130,1680,130,1646,130C1611.4,130,1577,130,1543,130C1508.6,130,1474,130,1440,130C1405.7,130,1371,130,1337,130C1302.9,130,1269,130,1234,130C1200,130,1166,130,1131,130C1097.1,130,1063,130,1029,130C994.3,130,960,130,926,130C891.4,130,857,130,823,130C788.6,130,754,130,720,130C685.7,130,651,130,617,130C582.9,130,549,130,514,130C480,130,446,130,411,130C377.1,130,343,130,309,130C274.3,130,240,130,206,130C171.4,130,137,130,103,130C68.6,130,34,130,17,130L0,130Z"
+        ></path>
+      </svg>
     </div>
     <div class="main">
       <div class="dsc">
@@ -225,17 +277,43 @@
       <h2 class="h2xl text-center"><span class="animatedtext-content">🔥Скоро здесь будет ещё больше интересного.</span></h2>
       <p></p>
     </div>
-    <div class="main" style="margin-bottom: -2rem;">
+    <div class="container progress-bar-animated">
+      <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" viewBox="0 0 1440 150" version="1.1">
+        <defs>
+          <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+            <stop stop-color="rgba(243, 106, 62, 0.1)" offset="0%"></stop>
+            <stop stop-color="rgba(245, 39, 39, 0.8)" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+        <path
+          style="transform: translate(0, 0px); opacity: 1; filter: drop-shadow(10px 31px 31px rgb(0, 0, 0))"
+          fill="url(#sw-gradient-0)"
+          d="M0,135L40,122.5C80,110,160,85,240,72.5C320,60,400,60,480,72.5C560,85,640,110,720,117.5C800,125,880,115,960,102.5C1040,90,1120,75,1200,77.5C1280,80,1360,100,1440,105C1520,110,1600,100,1680,100C1760,100,1840,110,1920,102.5C2000,95,2080,70,2160,60C2240,50,2320,55,2400,57.5C2480,60,2560,60,2640,52.5C2720,45,2800,30,2880,20C2960,10,3040,5,3120,12.5C3200,20,3280,40,3360,57.5C3440,75,3520,90,3600,92.5C3680,95,3760,85,3840,87.5C3920,90,4000,105,4080,112.5C4160,120,4240,120,4320,110C4400,100,4480,80,4560,60C4640,40,4720,20,4800,22.5C4880,25,4960,50,5040,50C5120,50,5200,25,5280,27.5C5360,30,5440,60,5520,62.5C5600,65,5680,40,5720,27.5L5760,15L5760,150L5720,150C5680,150,5600,150,5520,150C5440,150,5360,150,5280,150C5200,150,5120,150,5040,150C4960,150,4880,150,4800,150C4720,150,4640,150,4560,150C4480,150,4400,150,4320,150C4240,150,4160,150,4080,150C4000,150,3920,150,3840,150C3760,150,3680,150,3600,150C3520,150,3440,150,3360,150C3280,150,3200,150,3120,150C3040,150,2960,150,2880,150C2800,150,2720,150,2640,150C2560,150,2480,150,2400,150C2320,150,2240,150,2160,150C2080,150,2000,150,1920,150C1840,150,1760,150,1680,150C1600,150,1520,150,1440,150C1360,150,1280,150,1200,150C1120,150,1040,150,960,150C880,150,800,150,720,150C640,150,560,150,480,150C400,150,320,150,240,150C160,150,80,150,40,150L0,150Z"
+        ></path>
+        <defs>
+          <linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0">
+            <stop stop-color="rgba(243, 106, 62, 0.5)" offset="0%"></stop>
+            <stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+        <path
+          style="transform: translate(0, 50px); opacity: 0.9; filter: drop-shadow(10px 31px 31px rgb(0, 0, 0))"
+          fill="url(#sw-gradient-1)"
+          d="M0,39L17.1,34.7C34.3,30,69,22,103,30.3C137.1,39,171,65,206,71.5C240,78,274,65,309,62.8C342.9,61,377,69,411,73.7C445.7,78,480,78,514,67.2C548.6,56,583,35,617,30.3C651.4,26,686,39,720,49.8C754.3,61,789,69,823,62.8C857.1,56,891,35,926,34.7C960,35,994,56,1029,54.2C1062.9,52,1097,26,1131,28.2C1165.7,30,1200,61,1234,75.8C1268.6,91,1303,91,1337,95.3C1371.4,100,1406,108,1440,112.7C1474.3,117,1509,117,1543,108.3C1577.1,100,1611,82,1646,75.8C1680,69,1714,74,1749,80.2C1782.9,87,1817,95,1851,84.5C1885.7,74,1920,43,1954,30.3C1988.6,17,2023,22,2057,21.7C2091.4,22,2126,17,2160,15.2C2194.3,13,2229,13,2263,10.8C2297.1,9,2331,4,2366,17.3C2400,30,2434,61,2451,75.8L2468.6,91L2468.6,130L2451.4,130C2434.3,130,2400,130,2366,130C2331.4,130,2297,130,2263,130C2228.6,130,2194,130,2160,130C2125.7,130,2091,130,2057,130C2022.9,130,1989,130,1954,130C1920,130,1886,130,1851,130C1817.1,130,1783,130,1749,130C1714.3,130,1680,130,1646,130C1611.4,130,1577,130,1543,130C1508.6,130,1474,130,1440,130C1405.7,130,1371,130,1337,130C1302.9,130,1269,130,1234,130C1200,130,1166,130,1131,130C1097.1,130,1063,130,1029,130C994.3,130,960,130,926,130C891.4,130,857,130,823,130C788.6,130,754,130,720,130C685.7,130,651,130,617,130C582.9,130,549,130,514,130C480,130,446,130,411,130C377.1,130,343,130,309,130C274.3,130,240,130,206,130C171.4,130,137,130,103,130C68.6,130,34,130,17,130L0,130Z"
+        ></path>
+      </svg>
+    </div>
+    <div class="main" style="margin-bottom: -2rem; margin-top: 1rem">
       <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
       <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
       <p></p>
       <hr class="hr" />
     </div>
     <div class="main padding">
-      <h2 class="h2x text-center" style="color: #6255da;"><a href="#" class="rgbtext-blue">Arsenij Kotikov©</a>, 2022 </h2>
-      <h2 class="h2x text-center" style="color:#dab055"> Спасибо, <a class="rgbtext" href="https://www.cloudflare.com/">Сloudflare</a></h2>
+      <h2 class="h2x text-center" style="color: #6255da"><a href="#" class="rgbtext-blue">Arsenij Kotikov©</a>, 2022</h2>
+      <h2 class="h2x text-center" style="color: #dab055">Спасибо, <a class="rgbtext" href="https://www.cloudflare.com/">Сloudflare</a></h2>
     </div>
-<!-- The above code is a slideshow that changes the background color of the page every 4 seconds. -->
+    <!-- The above code is a slideshow that changes the background color of the page every 4 seconds. -->
     <script>
       let slideIndex = 0;
       showSlides();
@@ -259,7 +337,7 @@
         document.body.classList.remove("color" + slideIndexm1);
       }
     </script>
-<!-- Adding a .visible class to the element when it is in the viewport. -->
+    <!-- Adding a .visible class to the element when it is in the viewport. -->
     <script>
       jQuery(document).ready(function ($) {
         $(".card").viewportChecker({
