--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         ></path>
       </svg>
     </div>
-    <div class="main">
+    <div class="main" style="padding-top: 2rem">
       <div class="dsc">
         <img src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld"><span class="animatedtext-content">Блокчейн</span></h2>
@@ -303,7 +303,7 @@
         ></path>
       </svg>
     </div>
-    <div class="main" style="margin-bottom: -2rem; margin-top: 1rem">
+    <div class="main" style="margin-bottom: -2rem; padding-top: 2rem">
       <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
       <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
       <p></p>
