--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <hr class="hr" />
     </div>
     <div class="main-transparent">
-      <h2 class="h2xl text-center"><span class="animatedtext-content animatedtext-second">какие технологии я использую?</span></h2>
+      <h2 class="h2xl text-center">какие технологии я использую?</h2>
     </div>
     <div class="catbg">
       <div class="card-deck">
