--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
         </div>
       </div>
 
-      <div class="main-transparent highlighted" s style="background-color: #1d1d1da1 !important">
+      <div class="main-transparent highlighted" style="background-color: #1d1d1da1 !important">
         <p></p>
         <h2 class="h2xl text-center">Что я учу/планирую выучить?</h2>
         <p></p>
       </div>
     </div>
-    <div class="container progress-bar-animated" style="margin-bottom: 0; background: #1d1d1d">
+    <div class="container progress-bar-animated" style="margin-bottom: 0; background: #1d1d1df3">
       <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" class="svg" viewBox="0 0 1440 150" version="1.1">
         <defs>
           <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
